index.css
/* Google Fonts - Poppins */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

html {
  height: 100vh;
  margin: 0;
}

body {
  background-color: #ddd8c4;
  margin: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

header {
  background-color: #69a297;
  margin: 0;
  padding: 20px;
}

.main-content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
}

div.article-content {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  max-width: 55%;
}

.article-img {
  width: 200px;
  height: auto;
}
h1 {
  margin: 0;
  color: white;
  text-align: center;
}

nav > ul {
  display: flex;
  padding: 10px;
  justify-content: space-evenly;
  margin: 0;
}

nav {
  margin: 0;
  background-color: #50808e;
}
ul > li {
  list-style: none;
  color: white;
  padding: 10px;
  border-radius: 15px;
  transition: 0.7s all;
}
ul > li:hover {
  background-color: white;
  color: black;
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #a3c9a8;
  margin: 0;
  height: 15%;
  padding: 20px;
}
footer p {
  text-align: center;
  color: white;
}

.wrapper {
  position: fixed;
  bottom: 50px;
  right: -370px;
  max-width: 345px;
  width: 100%;
  background: #faf5e0;
  border-radius: 8px;
  padding: 15px 25px 22px;
  transition: right 0.3s ease;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
}
.wrapper.show {
  right: 20px;
}
.wrapper header {
  display: flex;
  align-items: center;
  column-gap: 15px;
  background-color: #cccbc7;
}
header i {
  color: #4070f4;
  font-size: 32px;
}
header h2 {
  color: #4070f4;
  font-weight: 500;
}
.wrapper .data {
  margin-top: 16px;
}
.wrapper .data p {
  color: #333;
  font-size: 16px;
}
.data p a {
  color: #4070f4;
  text-decoration: none;
}
.data p a:hover {
  text-decoration: underline;
}
.wrapper .buttons {
  margin-top: 16px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.buttons .button {
  border: none;
  color: #fff;
  padding: 8px 0;
  border-radius: 4px;
  background: #4070f4;
  cursor: pointer;
  width: calc(100% / 2 - 10px);
  transition: all 0.2s ease;
}
.buttons #acceptBtn:hover {
  background-color: #034bf1;
}
#declineBtn {
  border: 2px solid #4070f4;
  background-color: #fff;
  color: #4070f4;
}
#declineBtn:hover {
  background-color: #4070f4;
  color: #fff;
}

button.dark-button {
  background-color: transparent;
  border-style: none;
}
.dark-icon,
.light-icon {
  height: 24px;
  width: 24px;
  background-color: transparent;
}

.light-icon {
  background-color: rgba(255, 255, 255, 0.745);
}
.dark-mode header,
.dark-mode footer {
  background-color: #1b1b1b;
}

.dark-mode nav {
  background-color: #373434;
}

body.dark-mode,
.dark-mode.main-content {
  background-color: #4e4e4e;
  color: white;
}

.dark-mode ul > li:hover {
  background-color: white;
  padding: 10px;
  color: black;
}

